versioned_docs/version-1.10/saas-development-console/usage-metering.md
---
title: "Meter Unit Setting"
slug: "usage-metering"
excerpt: ""
hidden: false
createdAt: "Mon Mar 11 2024 13:45:00 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Mon Mar 11 2024 13:45:00 GMT+0000 (Coordinated Universal Time)"
---
Define the meter unit that will be used as the measurement unit.

## Meter Unit Setting

1. From the **SaaS Development Console, select `Metering Units`**

![usage-metering-1](/img/saas-development-console/usage-metering-1.png)

1. **Click on `Metering Unit`**

![usage-metering-2](/img/saas-development-console/usage-metering-2.png)

2. Set the meter unit with `Metering Unit`  

| Keyword               | Description    |
|---------------------  |--------------- |
| Unit Name             | Define for programmatic identification. Duplicate names cannot be created.  |
| Unit Display Name     | Decide on a name for the meter.  |
| Unit Description      | Set up a description of the meter that people can easily understand.  |
| Calculation Method    | Set any of the following. sum（Total value of usage during the period) or max（Maximum usage value during the period） | 

    Set the above information and click the Save button.

## Set the meter unit to the measurement unit.
When creating a measurement unit, you can set a meter unit.
You can select a meter unit that is already registered.

![usage-metering-3](/img/saas-development-console/usage-metering-3.png)

## Updating and deleting meter units
Meter units that have been set as measurement units cannot be deleted.
Only the meter unit display name and meter unit description can be updated.

![usage-metering-4](/img/saas-development-console/usage-metering-4.png)


